# TalentLens

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  _test_heuristic.py  _test_identity.py  agents.py  config.py  dashboard.py  dashboard_v2.py  dashboard_v3.py  heuristics.py  history.py  interview_gen.py  jd_analyzer.py  llm_client.py  main.py  models.py  pyproject.toml  report_generator.py  requirements.txt  resume_parser.py  scorer.py  taskctl.yaml  test_e2e.py  verifier.py  verifier_certs.py  verifier_company.py  verifier_identity.py  verifier_linkedin.py
.github/workflows/: ci.yml
data/: cert_registry.json  known_companies.json
scripts/: update_readme_stats.py
tests/: conftest.py  test_archetypes.py  test_comparator.py  test_export_engine.py  test_history.py  test_jd_quality.py  test_pipeline.py  test_red_flags.py
